added songs and all_songs.csv

--- a/src/collect_songs.ipynb
+++ b/src/collect_songs.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "395c0769",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,7 @@
       "Filtering and saving to ../data/songs/song_of_the_worthy_lamb_pt1.csv...\n",
       "Filtering and saving to ../data/songs/song_of_the_worthy_lamb_pt2.csv...\n",
       "Filtering and saving to ../data/songs/the_song_of_moses_and_the_lamb.csv...\n",
+      "Saving all_songs.csv\n",
       "Processing complete.\n"
      ]
     }
@@ -57,6 +58,7 @@
     "\n",
     "# Read the main data file\n",
     "df = pl.read_csv(kjv_input_file)\n",
+    "df_all_songs = pl.DataFrame()\n",
     "\n",
     "# --- Define Filters ---\n",
     "# We use a dictionary where the key is the desired output filename (without extension)\n",
@@ -171,7 +173,12 @@
     "        output_path = f\"{output_folder}/{save_file}.csv\"\n",
     "        print(f\"Filtering and saving to {output_path}...\")\n",
     "\n",
-    "        df.filter(filter_expression).write_csv(output_path)\n",
+    "        filtered_df = df.filter(filter_expression)\n",
+    "        filtered_df.write_csv(output_path)\n",
+    "        df_all_songs = df_all_songs.vstack(filtered_df)\n",
+    "\n",
+    "df_all_songs.write_csv(f\"../data/all_songs.csv\")\n",
+    "print(\"Saving all_songs.csv\")\n",
     "\n",
     "print(\"Processing complete.\")"
    ]
