Implemented syllable counting of individual words

--- a/src/words_to_syllables.ipynb
+++ b/src/words_to_syllables.ipynb
@@ -8,7 +8,15 @@
    "outputs": [],
    "source": [
     "from nltk.corpus import cmudict\n",
-    "import re"
+    "import re\n",
+    "from pprint import pprint\n",
+    "import pyphen\n",
+    "# Download the cmudict data if you haven't already\n",
+    "# import nltk\n",
+    "# try:\n",
+    "#     nltk.data.find(\"corpora/cmudict.zip\")\n",
+    "# except nltk.downloader.DownloadError:\n",
+    "#     nltk.download(\"cmudict\")"
    ]
   },
   {
@@ -21,19 +29,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of unique words: 13734\n"
+      "Total number of unique words: 13725\n"
      ]
     }
    ],
    "source": [
     "with open(\"../data/kjv.txt\", \"r\") as file:\n",
-    "    text = file.read()\n",
+    "    kjv_text = file.read()\n",
     "\n",
-    "text = re.sub(r\"[.,:;'()?!]\", \"\", text)\n",
+    "clean_kjv_text = re.sub(r\"[.,:;'()?!|]\", \"\", kjv_text)\n",
     "\n",
     "all_kjv_words = set()\n",
     "\n",
-    "for word in text.split():\n",
+    "for word in clean_kjv_text.split():\n",
     "    all_kjv_words.add(word)\n",
     "\n",
     "all_kjv_words = list(all_kjv_words)\n",
@@ -44,107 +52,225 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a4b73c6",
+   "id": "1d887f9f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    List of all words in KJV, unrecognized by CMUDict and not caught by this filter.\n",
-      "    These words need to be manually mapped to a syllable count:\n",
-      "straiteneth\n",
-      "favourest\n",
-      "savourest\n",
-      "hearkeneth\n",
-      "appertaineth\n",
-      "bewaileth\n",
-      "reproveth\n",
-      "smotest\n",
-      "vaunteth\n",
-      "dishonoureth\n",
-      "defileth\n",
-      "dishonourest\n",
-      "honoureth\n",
-      "forbeareth\n",
-      "disannulleth\n",
-      "prophesieth\n",
-      "contemneth\n",
-      "swarest\n",
-      "wotteth\n",
-      "bewrayeth\n",
-      "stablisheth\n",
-      "intermeddleth\n"
+      "\n",
+      "--- Stats ---\n",
+      "{'Capital letter, skipped': 3098,\n",
+      " 'Immediately recognized': 8280,\n",
+      " \"Removed 'est' or 'eth', recognized\": 776,\n",
+      " \"Removed 's' from end, recognized\": 192,\n",
+      " 'Removed 1 extra character from the end, recognized': 45,\n",
+      " \"Replaced 'iest' or 'ieth' with 'y', recognized\": 20,\n",
+      " \"Replaced 'or'/'ors' with 'er', recognized\": 2,\n",
+      " \"Replaced British 'u' and removed 'est' or 'eth', recognized\": 5,\n",
+      " \"Replaced British 'u', recognized\": 33,\n",
+      " 'Unrecognized and not caught by filters': 1274}\n"
      ]
     }
    ],
    "source": [
     "pronunciations = cmudict.dict()\n",
     "\n",
-    "def count_syllables_cmudict(word: str, pronunciations: dict):\n",
+    "\n",
+    "def count_syllables_cmudict(word: str, pronunciations_dict: dict) -> int:\n",
     "    \"\"\"Counts the syllables in a word using NLTK's CMUDict.\"\"\"\n",
-    "    if word.lower() in pronunciations:\n",
-    "        # A word can have multiple pronunciations, we'll use the first one.\n",
-    "        return len(\n",
-    "            [\n",
-    "                phoneme\n",
-    "                for phoneme in pronunciations[word.lower()][0]\n",
-    "                if phoneme[-1].isdigit()\n",
-    "            ]\n",
-    "        )\n",
-    "    else:\n",
+    "    word_lower = word.lower()\n",
+    "    if word_lower not in pronunciations_dict:\n",
     "        return 0\n",
+    "    # A word can have multiple pronunciations; we'll use the first one.\n",
+    "    return len(\n",
+    "        [\n",
+    "            phoneme\n",
+    "            for phoneme in pronunciations_dict[word_lower][0]\n",
+    "            if phoneme[-1].isdigit()\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "\n",
-    "print(\"\"\"    List of all words in KJV, unrecognized by CMUDict and not caught by this filter.\n",
-    "    These words need to be manually mapped to a syllable count:\"\"\")\n",
+    "def process_word(word: str, pronunciations_dict: dict, stats: dict) -> None:\n",
+    "    \"\"\"\n",
+    "    Checks a word against CMUDict and various transformations, updating stats.\n",
+    "    Returns the word if it remains unrecognized, otherwise returns None.\n",
+    "    \"\"\"\n",
+    "    if count_syllables_cmudict(word, pronunciations_dict) > 0:\n",
+    "        stats[\"Immediately recognized\"] += 1\n",
+    "        return None\n",
     "\n",
-    "words_to_be_estimated_or_manually_entered = []\n",
+    "    if not str.islower(word):\n",
+    "        stats[\"Capital letter, skipped\"] += 1\n",
+    "        return None\n",
+    "\n",
+    "    # --- Suffix and Transformation Checks ---\n",
+    "\n",
+    "    # Rule: Remove 'est' or 'eth'\n",
+    "    if word.endswith((\"eth\", \"est\")):\n",
+    "        base_word_3 = word[:-3]\n",
+    "        base_word_2 = word[:-2]\n",
+    "        if (\n",
+    "            count_syllables_cmudict(base_word_3, pronunciations_dict) > 0\n",
+    "            or count_syllables_cmudict(base_word_2, pronunciations_dict) > 0\n",
+    "        ):\n",
+    "            stats[\"Removed 'est' or 'eth', recognized\"] += 1\n",
+    "            return None \n",
+    "\n",
+    "    # Rule: Remove 's' from end\n",
+    "    if word.endswith((\"s\")):\n",
+    "        transformed_word = word[:-1]\n",
+    "        if count_syllables_cmudict(transformed_word, pronunciations_dict) > 0:\n",
+    "            stats[\"Removed 's' from end, recognized\"] += 1\n",
+    "            return None\n",
+    "\n",
+    "    # Rule: Remove 1 extra character from the end (often after suffix removal fails)\n",
+    "    if word.endswith((\"eth\", \"est\")):\n",
+    "        base_word_4 = word[:-4]\n",
+    "        if count_syllables_cmudict(base_word_4, pronunciations_dict) > 0:\n",
+    "            stats[\"Removed 1 extra character from the end, recognized\"] += 1\n",
+    "            return None\n",
+    "\n",
+    "    # Rule: Replace 'iest' or 'ieth' with 'y'\n",
+    "    if word.endswith((\"ieth\", \"iest\")):\n",
+    "        transformed_word = re.sub(r\"(iest|ieth)$\", \"y\", word)\n",
+    "        if count_syllables_cmudict(transformed_word, pronunciations_dict) > 0:\n",
+    "            stats[\"Replaced 'iest' or 'ieth' with 'y', recognized\"] += 1\n",
+    "            return None\n",
+    "\n",
+    "    # Rule: Replace British 'our' with 'or'\n",
+    "    if \"our\" in word:\n",
+    "        transformed_word = re.sub(\n",
+    "            r\"our\", \"or\", word\n",
+    "        )\n",
+    "        if count_syllables_cmudict(transformed_word, pronunciations_dict) > 0:\n",
+    "            stats[\"Replaced British 'u', recognized\"] += 1\n",
+    "            return None\n",
+    "\n",
+    "    # Rule: Replace British 'our' with 'or'\n",
+    "    if \"our\" in word and word.endswith((\"est\", \"eth\")):\n",
+    "        transformed_word = re.sub(r\"our\\w*\", \"or\", word)\n",
+    "        if count_syllables_cmudict(transformed_word, pronunciations_dict) > 0:\n",
+    "            stats[\"Replaced British 'u' and removed 'est' or 'eth', recognized\"] += 1\n",
+    "            return None\n",
+    "\n",
+    "    # Rule: Replace 'or'/'ors' with 'er'\n",
+    "    if word.endswith((\"or\", \"ors\")):\n",
+    "        transformed_word = re.sub(r\"or\\w?\", \"er\", word)\n",
+    "        if count_syllables_cmudict(transformed_word, pronunciations_dict) > 0:\n",
+    "            stats[\"Replaced 'or'/'ors' with 'er', recognized\"] += 1\n",
+    "            return None\n",
+    "\n",
+    "    # If no rules matched and the word is unrecognized\n",
+    "    stats[\"Unrecognized and not caught by filters\"] += 1\n",
+    "    return word\n",
+    "\n",
+    "\n",
+    "# --- Main Execution ---\n",
+    "\n",
+    "difficult_words = []\n",
+    "word_stats = {\n",
+    "    \"Immediately recognized\": 0,\n",
+    "    \"Capital letter, skipped\": 0,\n",
+    "    \"Unrecognized and not caught by filters\": 0,\n",
+    "    \"Removed 'est' or 'eth', recognized\": 0,\n",
+    "    \"Replaced 'iest' or 'ieth' with 'y', recognized\": 0,\n",
+    "    \"Removed 1 extra character from the end, recognized\": 0,\n",
+    "    \"Replaced British 'u', recognized\": 0,\n",
+    "    \"Replaced British 'u' and removed 'est' or 'eth', recognized\": 0,\n",
+    "    \"Replaced 'or'/'ors' with 'er', recognized\": 0,\n",
+    "    \"Removed 's' from end, recognized\": 0,\n",
+    "\n",
+    "}\n",
     "\n",
     "for word in all_kjv_words:\n",
-    "    # If word is unrecognized by CMUDict:\n",
-    "    if count_syllables_cmudict(word, pronunciations) == 0:\n",
-    "        # If word is not all lowercase, it is probably just a name:\n",
-    "        # e.g. \"Ashdothpisgah\", \"A\" is not lowercase, and it is a name.\n",
-    "        if not str.islower(word):\n",
-    "            continue\n",
-    "        # If word ends with \"est\" or \"eth\", it is probably just a normal word with that suffix.\n",
-    "        # e.g. \"asketh\" -> \"ask\" + \"eth\"\n",
-    "        word_suffix = word[-3:]\n",
-    "        if word_suffix == \"eth\" or word_suffix == \"est\":\n",
-    "            # If the word is still not recognized, even after taking off \"st\" or \"th\" or \"est\" or \"eth\":\n",
-    "            # e.g. \"forbeareth\" -> \"forbear\" is still not recognized\n",
-    "            if (\n",
-    "                count_syllables_cmudict(word[:-3], pronunciations)\n",
-    "                == 0 and count_syllables_cmudict(word[:-2], pronunciations)\n",
-    "                == 0\n",
-    "            ):\n",
-    "                # If word ends with \"ieth\" or \"iest\", and still cannot be recognized by changing the \"i\" to a \"y\":\n",
-    "                # e.g. \"intermeddleth\" -> \"intermeddle\" is still not recognized\n",
-    "                if count_syllables_cmudict(re.sub(r\"(iest$|ieth$|est$|eth$)\", \"y\", word), pronunciations) == 0:\n",
-    "                    # If removing an additional character from the end still does not allow it to be recognized:\n",
-    "                    # e.g. \"blasphemest\" -> \"blasphe\" is not recognized by CMUDict\n",
-    "                    if count_syllables_cmudict(word[:-4], pronunciations) == 0:\n",
-    "                        print(word)\n",
-    "                    # If the word had an extra character, which was stopping it from being recognized\n",
-    "                    # e.g. \"slippeth\" -> \"slip\", which can now be recognized\n",
-    "                    else:\n",
-    "                        continue\n",
-    "                # If the word is now recognized, after changing \"ieth\" or \"iest\" to \"y\":\n",
-    "                # e.g. \"repliest\" -> \"reply\", which can now be recognized\n",
-    "                # e.g. \"blashpemest\" -> \"blasphemy\", which can now be recognized\n",
-    "                else:\n",
-    "                    continue\n",
-    "            # If the word is now recognized, after removing the suffix:\n",
-    "            # e.g. \"removeth\" -> \"remove\" + \"th\"\n",
-    "            # e.g. \"staggereth\" -> \"stagger\" + \"eth\"\n",
-    "            else:\n",
-    "                continue\n",
-    "        else:\n",
-    "            continue\n",
-    "    # If word is recognized by CMUDict:\n",
-    "    else:\n",
-    "        continue"
+    "    unrecognized = process_word(word, pronunciations, word_stats)\n",
+    "    if unrecognized:\n",
+    "        difficult_words.append(unrecognized)\n",
+    "\n",
+    "print(\"\\n--- Stats ---\")\n",
+    "pprint(word_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "78cc70fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word: syllables\n",
+      "eveningtide: 2\n",
+      "forbeareth: 2\n",
+      "sawn: 1\n",
+      "haply: 2\n",
+      "viol: 2\n",
+      "cloven: 1\n",
+      "appertaineth: 3\n",
+      "stumblingblocks: 3\n",
+      "menstealers: 3\n",
+      "scall: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "hyphen_gb = pyphen.Pyphen(lang=\"en_GB\")\n",
+    "hyphen_us = pyphen.Pyphen(lang=\"en_US\")\n",
+    "\n",
+    "def count_syllables_pyphen(word: str):\n",
+    "    hyphenated_word_gb = hyphen_gb.inserted(word)\n",
+    "    syllable_count_gb = len(hyphenated_word_gb.split(\"-\"))\n",
+    "    hyphenated_word_us = hyphen_us.inserted(word)\n",
+    "    syllable_count_us = len(hyphenated_word_us.split(\"-\"))\n",
+    "    return max(syllable_count_us, syllable_count_gb)\n",
+    "\n",
+    "print(\"word: syllables\")\n",
+    "\n",
+    "# My observation: in most cases, the best answer is the highest of the 2.\n",
+    "# Therefore, the best option would be to get the higher count.\n",
+    "for word in difficult_words[0:10]:\n",
+    "    word = re.sub(\"-\", \"\", word)\n",
+    "    print(f\"{word}: {count_syllables_pyphen(word)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "76f89cf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calling: 2\n",
+      "Zacchaeus: 4\n",
+      "Whoso: 1\n",
+      "spoiler: 2\n",
+      "eveningtide: 2\n",
+      "Arpad: 1\n",
+      "forbeareth: 2\n",
+      "Aharah: 2\n",
+      "offered: 2\n",
+      "idleness: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "pronunciations = cmudict.dict()\n",
+    "def get_syllable_count(word:str):\n",
+    "    syllable_count = count_syllables_cmudict(word, pronunciations)\n",
+    "    if syllable_count == 0:\n",
+    "        syllable_count = count_syllables_pyphen(word)\n",
+    "    return syllable_count\n",
+    "\n",
+    "for word in all_kjv_words[0:10]:\n",
+    "    print(f\"{word}: {get_syllable_count(word)}\")"
    ]
   }
  ],
