Implemented fuzzy matching

--- a/src/text_to_numbers.ipynb
+++ b/src/text_to_numbers.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4c00cd0c",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "da371479",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
      "output_type": "stream",
      "text": [
       "List index matching: e.g. [1, 1, 3, 2, 1, 1, 1, 1, 1, 1]\n",
-      "get_exact_match: 0.16 seconds\n",
+      "get_exact_match: 0.17 seconds\n",
       "Number of exact matches: 1\n",
       "Locations of exact matches: [396659]\n",
       "\n",
@@ -146,7 +146,7 @@
       "Number of exact matches: 1\n",
       "Locations of exact matches: [396659]\n",
       "\n",
-      "list_to_str: 0.08 seconds\n",
+      "list_to_str: 0.09 seconds\n",
       "list_to_str: 0.00 seconds\n",
       "\n",
       "String/substring matching: e.g. '1132111111'\n",
@@ -275,12 +275,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "51f02495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ScoreAlignment(score=100.0, src_start=396659, src_end=396713, dest_start=0, dest_end=54)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: implement rapidfuzz"
+    "# For queries under 64 words, this returns the guaranteed closest match\n",
+    "fuzz.partial_ratio_alignment(\n",
+    "    all_kjv_syllables_str, # KJV Bible\n",
+    "    search_syllables_str # Psalm 67\n",
+    ")"
    ]
   }
  ],
