Implemented representing a match as a string

--- a/src/fuzzy_match.ipynb
+++ b/src/fuzzy_match.ipynb
@@ -91,10 +91,10 @@
     "    full_length = len(kjv_syllables_str)\n",
     "    result = process.extract(\n",
     "        query=search_syllables_str,\n",
-    "        choices=[\n",
+    "        choices=(\n",
     "            kjv_syllables_str[i : i + search_length]\n",
     "            for i in range(0, full_length - search_length + 1, step)\n",
-    "        ],\n",
+    "        ),\n",
     "        scorer=fuzz.ratio,\n",
     "        limit=None,\n",
     "        score_cutoff=score_cutoff,\n",
@@ -134,7 +134,7 @@
      "output_type": "stream",
      "text": [
       "that / But\n",
-      "he / “I\n",
+      "he / I\n",
       "was / know\n",
       "sold / whom\n",
       "to / I\n",
@@ -157,7 +157,7 @@
       "the / him\n",
       "number / against\n",
       "of / that\n",
-      "years / day”\n"
+      "years / day\n"
      ]
     }
    ],
